# a-file

./: docker-compose.yml  pyproject.toml
app/: .env.template  alembic.ini  main.py  run_main.py
app/alembic/versions/: 2025_09_23_1307-d6a6da69b0df_create_file_item_table.py  2025_09_23_1311-cae536bc5e22_create_file_item_table.py
app/api/: __init__.py
app/api/api_v1/: __init__.py  file_items.py  healthcheck.py
app/core/: config.py  dependencies.py  lifespan.py
app/core/exceptions/: __init__.py  base.py  file.py  file_item.py  path.py
app/core/gunicorn/: __init__.py  app_options.py  application.py
app/core/models/: __init__.py  base.py  db_helper.py  file_item.py
app/core/schemas/: base.py  file_item.py  healthcheck.py
app/services/file_item/: __init__.py  base.py
app/utils/: path.py
docker-build/app/: Dockerfile
